# lazy-eval

./: Makefile.am  README.md  compile.sh  config.h  configure.ac  gen_clique_tdc.cpp  gen_tdc.cpp  make_incidence_graph.cpp  mindeg.h  sat_to_vc.cpp  vertex_cover.cpp  vertex_cover.h  vertex_cover_lazy.cpp  vertex_cover_lazy.h  vertex_cover_lazy_mindegree.cpp  vertex_cover_lazy_refactored.cpp  vertex_cover_lazy_refactored.h  vertex_cover_lazyonly.cpp  vertex_cover_lazyonly.h
